--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ logging:
   level:
     org.springframework.security: DEBUG
 
-spring:
+security:
   oauth2:
     resource:
       userInfoUri: http://localhost:8080/user
