--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -1,3 +1,8 @@
+security:
+  oauth2:
+    resource:
+      jwt:
+        keyUri: http://localhost:8080/oauth/token_key
 logging:
   level:
     org.springframework.security: DEBUG
