--- a/client-server/pom.xml
+++ b/client-server/pom.xml
@@ -33,11 +33,11 @@
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
-		</dependency><!--
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
-		</dependency>-->
+		</dependency>
 	</dependencies>
 
 	<build>
