--- a/client-server/src/main/resources/application.yml
+++ b/client-server/src/main/resources/application.yml
@@ -3,3 +3,20 @@ server:
 logging:
   level:
     org.springframework.security: DEBUG
+
+spring:
+  aop:
+    proxy-target-class: true
+
+security:
+  user:
+    password: none
+  oauth2:
+    client:
+      accessTokenUri: http://localhost:8080/oauth/token
+      userAuthorizationUri: http://localhost:8080/oauth/authorize
+      clientId: client-server-u2s
+      clientSecret: client-server-u2s-secret
+    resource:
+      jwt:
+        key-uri: http://localhost:8080/oauth/token_key
