--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -5,6 +5,6 @@ logging:
 security:
   oauth2:
     resource:
-      userInfoUri: http://localhost:8080/user
+      userInfoUri: http://localhost:8080/auth/user
 server:
   port: 9090
