--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -1,6 +1,7 @@
+server.contextPath: /auth
+
 logging:
-  level:
-    org.springframework.security: DEBUG
-    com.exteso.oauthtest: DEBUG
+ level:
+   org.springframework.security: DEBUG
 server:
-  port: 8080
+ port: 8080
