create client-server webapp

--- a/client-server/src/main/resources/application.yml
+++ b/client-server/src/main/resources/application.yml
@@ -9,14 +9,7 @@ spring:
     proxy-target-class: true
 
 security:
-  user:
-    password: none
   oauth2:
-    client:
-      accessTokenUri: http://localhost:8080/auth/oauth/token
-      userAuthorizationUri: http://localhost:8080/auth/oauth/authorize
-      clientId: client-server-u2s
-      clientSecret: client-server-u2s-secret
     resource:
       jwt:
-        key-uri: http://localhost:8080/auth/oauth/token_key
+        keyUri: http://localhost:8080/auth/oauth/token_key
