--- a/client-server/src/main/resources/application.yml
+++ b/client-server/src/main/resources/application.yml
@@ -13,3 +13,9 @@ security:
     resource:
       jwt:
         keyUri: http://localhost:8080/auth/oauth/token_key
+
+
+resourceServerClient:
+  accessTokenUri: http://localhost:8080/auth/oauth/token
+  clientId: service-account-1
+  clientSecret: service-account-1-secret
